--- a/views/user/forgot-otp.ejs
+++ b/views/user/forgot-otp.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Attiro Fashions - OTP Verification</title>
+    <title>Raabta Collections - OTP Verification</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/public/user/assets/images/favicon.png">
     <style>
         body, html {
             height: 100%;
