--- a/views/user/confirmorder.ejs
+++ b/views/user/confirmorder.ejs
@@ -218,7 +218,7 @@
         </svg>
     </div>
     <h1> Your Order is Confirmed!</h1>
-    <div class="order-id">ORDER NUMBER #<%= order.orderNumber %></div>
+    <div class="order-id">ORDER NUMBER <%= order.orderNumber %></div>
     <div>
        <a href="/orders"><button class="view-button">View Order details</button></a> 
     <a href="/shop"><button class="view-button">Continue Shopping</button>
