--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -94,7 +94,7 @@
                 <div class="order-card">
                   <div class="order-header">
                     <div class="order-header-left">
-                      <div class="order-id">Order ID: <%= order._id %></div>
+                      <div class="order-id">Order ID: <%= order.orderNumber %></div>
                       <div class="order-date">
                         Ordered on: <%= new
                         Date(order.createdAt).toLocaleDateString() %>
