--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -234,7 +234,7 @@
                             </div>
                             
                             <div class="form-group">
-                                <input type="tel" class="form-control" id="number" placeholder="Enter your number" name="number" value="<%= locals.input ? input.number : '' %>">
+                                <input type="tel" class="form-control" id="number" placeholder="Enter your number" name="phone" value="<%= locals.input ? input.number : '' %>">
                                 <small id="numberError" class="error-text">Please enter a valid phone number</small>
                             </div>
                             
